# opencad

./: Cargo.toml  index.html
.cargo/: config.toml
src/: font_system.rs  main.rs  state.rs
src/editor/: create.rs  dispose.rs  init.rs  mod.rs
src/in_project/: current_project.rs  dxf_renderer.rs  file_tree.rs  focus_change.rs  in_project_ui.rs  mod.rs  project.rs
src/main_menu/: main_menu_ui.rs  mod.rs  project_manager.rs
